--- a/Dockerfile.minion
+++ b/Dockerfile.minion
@@ -15,6 +15,7 @@ RUN echo "deb https://repo.saltproject.io/py3/ubuntu/20.04/arm64/latest focal ma
 # Update package list and install SaltStack packages
 RUN apt-get update -y
 RUN apt-get install salt-minion salt-ssh -y
+RUN apt-get install dnsutils tree -y
 RUN apt-get clean all
 
 # Configure Salt Master
