--- a/Dockerfile.minion
+++ b/Dockerfile.minion
@@ -28,5 +28,5 @@ RUN echo "PS1='\[\033[01;32m\]\u@salt-minion\[\033[00m\]:\[\033[01;34m\]\w\[\033
 COPY minion-entrypoint.sh /minion-entrypoint.sh
 RUN chmod +x minion-entrypoint.sh
 
-# Run the script to set grains
+# Run the entrypoint script
 ENTRYPOINT ["/minion-entrypoint.sh"]
